java/istio/infra/step-2/canary/2-weighted/payment-service/payment-service-v2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service-deployment-v2
  labels:
    app: payment-service
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-service
      version: v2
  template:
    metadata:
      labels:
        app: payment-service
        version: v2
    spec:
      serviceAccountName: payment-service-sa
      containers:
        - name: payment-service-container-v2
          image: sinhasonalkumar/payment-service:v2
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
